tests/should_fail/my_at_top_level.nds
-- `my` is not allowed at top level.
my x is 5
